# myinit

./: CMakeLists.txt  Makefile  README.md  config  daemon.c  fork_waitpid.c  list.c  list.h  main.c  runme.sh  sigtest.c
lists/: add.c  add.h  char_list.c  char_list.h  pid_list.c  pid_list.h
log/: log.c  log.h
parse/: parse_config.c  parse_config.h  parse_myinit_args.c  parse_myinit_args.h
run_daemon/: run_daemon.c  run_daemon.h
task/: task.c  task.h
